==> certainly-cyber/TI/workplace msp430/output/msp432/oled_spi/oled/oled_spi.c <==
#include "oled_spi.h"
#include "stdlib.h"
#include "oledfont.h"
#include "driverlib.h"

void OLED_WR_Byte(uint8 dat,uint8 cmd)
{

    if(cmd)
        GPIO_setOutputHighOnPin(GPIO_PORT_P2,GPIO_PIN4);
    else
        GPIO_setOutputLowOnPin(GPIO_PORT_P2,GPIO_PIN4);
    while (!(SPI_getInterruptStatus(EUSCI_B0_BASE,EUSCI_SPI_TRANSMIT_INTERRUPT)));
    SPI_transmitData(EUSCI_B0_BASE,dat);

    GPIO_setOutputHighOnPin(GPIO_PORT_P2,GPIO_PIN4);
}

void OLED_ShowChar(uint8 x,uint8 y,uint8 chr,uint8 size1)
{
    uint8_t i,m,temp,size2,chr1;
    uint8_t y0=y;
    size2=(size1/8+((size1%8)?1:0))*(size1/2);  //得到字体一个字符对应点阵集所占的字节数
    chr1=chr-' ';  //计算偏移后的值
    for(i=0;i<size2;i++)
    {
        if(size1==12)
        {temp=asc2_1206[chr1][i];} //调用12 06字体
        else if(size1==16)
        {temp=asc2_1608[chr1][i];} //调用16 08字体
        else if(size1==24)
        {temp=asc2_2412[chr1][i];} //调用24 12字体
        else return;
                for(m=0;m<8;m++)           //写入数据
                {
                    if(temp&0x80)OLED_DrawPoint(x,y);
                    else OLED_ClearPoint(x,y);
                    temp<<=1;
                    y++;
                    if((y-y0)==size1)
                    {
                        y=y0;
                        x++;
                        break;
          }
                }
  }
}

void OLED_ShowChinese(uint8 x,uint8 y,uint8 num,uint8 size1)
{
    uint8_t i,m,n=0,temp,chr1;
    uint8_t x0=x,y0=y;
    uint8_t size3=size1/8;
    while(size3--)
    {
        chr1=num*size1/8+n;
        n++;
            for(i=0;i<size1;i++)
            {
                if(size1==16)
                        {temp=Hzk1[chr1][i];}//调用16*16字体
                else if(size1==24)
                        {temp=Hzk2[chr1][i];}//调用24*24字体
                else if(size1==32)
                        {temp=Hzk3[chr1][i];}//调用32*32字体
                else if(size1==64)
                        {temp=Hzk4[chr1][i];}//调用64*64字体
                else return;

                        for(m=0;m<8;m++)
                            {
                                if(temp&0x01)OLED_DrawPoint(x,y);
                                else OLED_ClearPoint(x,y);
                                temp>>=1;
                                y++;
                            }
                            x++;
                            if((x-x0)==size1)
                            {x=x0;y0=y0+8;}
                            y=y0;
             }
    }
}

void OLED_Init(void)
{


    GPIO_setOutputLowOnPin(GPIO_PORT_P3,GPIO_PIN0);
    for(i=0;i<1000;i++){
        //for(i2=0;i2<500;i++);
    }
    GPIO_setOutputHighOnPin(GPIO_PORT_P3,GPIO_PIN0);

    OLED_WR_Byte(0xAE,OLED_CMD);//--turn off oled panel
    OLED_WR_Byte(0x00,OLED_CMD);//---set low column address
    OLED_WR_Byte(0x10,OLED_CMD);//---set high column address
    OLED_WR_Byte(0x40,OLED_CMD);//--set start line address  Set Mapping RAM Display Start Line (0x00~0x3F)
    OLED_WR_Byte(0x81,OLED_CMD);//--set contrast control register
    OLED_WR_Byte(0xCF,OLED_CMD);// Set SEG Output Current Brightness
    OLED_WR_Byte(0xA1,OLED_CMD);//--Set SEG/Column Mapping     0xa0左右反置 0xa1正常
    OLED_WR_Byte(0xC8,OLED_CMD);//Set COM/Row Scan Direction   0xc0上下反置 0xc8正常
    OLED_WR_Byte(0xA6,OLED_CMD);//--set normal display
    OLED_WR_Byte(0xA8,OLED_CMD);//--set multiplex ratio(1 to 64)
    OLED_WR_Byte(0x3f,OLED_CMD);//--1/64 duty
    OLED_WR_Byte(0xD3,OLED_CMD);//-set display offset   Shift Mapping RAM Counter (0x00~0x3F)
    OLED_WR_Byte(0x00,OLED_CMD);//-not offset
    OLED_WR_Byte(0xd5,OLED_CMD);//--set display clock divide ratio/oscillator frequency
    OLED_WR_Byte(0x80,OLED_CMD);//--set divide ratio, Set Clock as 100 Frames/Sec
    OLED_WR_Byte(0xD9,OLED_CMD);//--set pre-charge period
    OLED_WR_Byte(0xF1,OLED_CMD);//Set Pre-Charge as 15 Clocks & Discharge as 1 Clock
    OLED_WR_Byte(0xDA,OLED_CMD);//--set com pins hardware configuration
    OLED_WR_Byte(0x12,OLED_CMD);
    OLED_WR_Byte(0xDB,OLED_CMD);//--set vcomh
    OLED_WR_Byte(0x40,OLED_CMD);//Set VCOM Deselect Level
    OLED_WR_Byte(0x20,OLED_CMD);//-Set Page Addressing Mode (0x00/0x01/0x02)
    OLED_WR_Byte(0x02,OLED_CMD);//
    OLED_WR_Byte(0x8D,OLED_CMD);//--set Charge Pump enable/disable
    OLED_WR_Byte(0x14,OLED_CMD);//--set(0x10) disable
    OLED_WR_Byte(0xA4,OLED_CMD);// Disable Entire Display On (0xa4/0xa5)
    OLED_WR_Byte(0xA6,OLED_CMD);// Disable Inverse Display On (0xa6/a7)
    OLED_WR_Byte(0xAF,OLED_CMD);
    OLED_Clear();
}
